# sonaphoria

./: Cargo.toml  README.md
src/: consts.rs  engine.rs  fullscreen_vertex.wgsl  main.rs  render.rs  shader.wgsl  wallpaper.rs
src/analysis/: band_energy.rs  beat_detector.rs  integrated.rs  mod.rs  smooth.rs
wallpapers/: kanagawa.ron  kanagawa.wgsl  light.ron  light.wgsl  light_buf0.wgsl  thing.wgsl
wallpapers/foo/: common.frag  foo.ron  main.frag  prop.frag
wallpapers/propagate/: common.glsl  main.frag  main.ron  prop.frag
wallpapers/storm_points/: main.frag  readout.frag  storm_points.ron
wallpapers/voro/: common.frag  voro.frag  voro.ron  voro_blur0.frag  voro_blur1.frag  voro_pattern.frag
wallpapers/voro_dedup/: common.frag  voro.frag  voro.ron  voro_blur0.frag  voro_blur1.frag  voro_pattern.frag
