[package]
name = "anim_wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
raw-window-handle = "0.5.0"
rustfft = "6.0.1"
wgpu = "0.14.2"
winit = "0.27.2"
cpal = "0.14"
anyhow = "1.0.68"
aubio = "0.2.1"
ringbuf = "0.3.1"
encase = { version = "0.4.1", features = ["glam"] }
clap = {version = "4.0.29", features=["derive"]}
serde = "1.0.151"
serde_yaml = "0.9.16"
ron = "0.8.0"
triple_buffer = "6.2.0"
bytemuck = "1.12.3"
synfx-dsp = "0.5.5"
glam = "0.22.0"
iir_filters = "0.1.2"
